--- a/ProjectX/app/src/main/res/layout/activity_detail.xml
+++ b/ProjectX/app/src/main/res/layout/activity_detail.xml
@@ -11,15 +11,14 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/interstellar"
+        android:scaleType="fitCenter"
+        android:src="@drawable/loading_image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/title"
