--- a/ProjectX/app/src/main/res/layout/activity_detail.xml
+++ b/ProjectX/app/src/main/res/layout/activity_detail.xml
@@ -58,4 +58,15 @@
         app:layout_constraintStart_toEndOf="@+id/title"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.053" />
+
+    <TextView
+        android:id="@+id/rateNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/description"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.826"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rateFilm"
+        app:layout_constraintVertical_bias="0.426" />
 </androidx.constraintlayout.widget.ConstraintLayout>
