--- a/ProjectX/app/src/main/res/layout/film_cell.xml
+++ b/ProjectX/app/src/main/res/layout/film_cell.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:gravity="center">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="140dp"
+    android:clickable="true"
+    android:id="@+id/myCardView"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:layout_height="215dp"
+    xmlns:cardview="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="26dp"
+    cardview:cardCornerRadius="10dp">
 
-    <ImageView
-        android:id="@+id/imageViewFilm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/loading_image"
-        android:layout_margin="20dp"></ImageView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</LinearLayout>
+
+        <ImageView
+            android:id="@+id/imageFilm"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#2d2d2d"
+            android:scaleType="centerCrop" />
+
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
