--- a/ProjectX/app/src/main/res/layout/film_cell.xml
+++ b/ProjectX/app/src/main/res/layout/film_cell.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="140dp"
-    android:clickable="true"
-    android:id="@+id/myCardView"
-    android:foreground="?android:attr/selectableItemBackground"
-    android:layout_height="215dp"
-    xmlns:cardview="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="26dp"
-    cardview:cardCornerRadius="10dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:cardview="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/myCardView"
+        android:layout_width="170dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        cardview:cardCornerRadius="10dp">
 
         <ImageView
             android:id="@+id/imageFilm"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#2d2d2d"
+            android:background="#ACBFBFBF"
             android:scaleType="centerCrop" />
 
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
