--- a/ProjectX/app/src/main/res/layout/activity_detail.xml
+++ b/ProjectX/app/src/main/res/layout/activity_detail.xml
@@ -17,13 +17,14 @@
         android:orientation="horizontal"
         android:paddingStart="15dp"
         android:paddingTop="15dp"
-        android:paddingEnd="15dp">
+        android:paddingEnd="15dp"
+        android:weightSum="3">
 
         <TextView
             android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text="Titolo"
             android:textColor="#000000"
             android:textSize="28dp"
@@ -33,7 +34,7 @@
             android:id="@+id/buttonRateFilm"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:layout_weight="0.5"
+            android:layout_weight="1"
             android:backgroundTint="@color/colorPrimary"
             android:text="Valuta"
             android:textSize="20dp" />
@@ -51,15 +52,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:gravity="bottom"
+        android:orientation="vertical"
         android:paddingBottom="15dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="3">
 
             <TextView
                 android:id="@+id/rateNumber"
@@ -67,12 +69,14 @@
                 android:layout_height="wrap_content"
                 android:text="   "
                 android:textColor="#000000"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                android:layout_weight="2"/>
 
             <ImageView
                 android:id="@+id/star"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
         </LinearLayout>
 
     </LinearLayout>
