--- a/ProjectX/app/src/main/res/layout/activity_detail.xml
+++ b/ProjectX/app/src/main/res/layout/activity_detail.xml
@@ -2,81 +2,155 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="9">
 
-    <ImageView
-        android:id="@+id/imageViewDetail"
-        android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:background="#ACBFBFBF"
-        android:scaleType="centerCrop" />
-
+    <!-- 3.1 -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingStart="15dp"
-        android:paddingTop="15dp"
-        android:paddingEnd="15dp"
-        android:weightSum="3">
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="Titolo"
-            android:textColor="#000000"
-            android:textSize="28dp"
-            android:textStyle="normal" />
-
-        <Button
-            android:id="@+id/buttonRateFilm"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/colorPrimary"
-            android:text="Valuta"
-            android:textSize="20dp" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel dolor sit amet tortor congue egestas vitae eget elit. Integer imperdiet ante arcu, a accumsan purus laoreet accumsan. Praesent turpis tellus, ultricies nec gravida et, tristique vel ante. Nullam quis nulla dui. Vestibulum ac porttitor sapien, nec pellentesque elit. Praesent gravida vehicula ipsum, id efficitur turpis sagittis molestie. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis diam congue, auctor sapien consectetur, lobortis erat. Integer dolor odio, porttitor quis varius et, egestas eget massa. Suspendisse a nulla ultrices, facilisis lectus in, laoreet diam."
-        android:textSize="18dp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="bottom"
+        android:layout_height="0dp"
+        android:layout_weight="3.1"
         android:orientation="vertical"
-        android:paddingBottom="15dp">
+        android:weightSum="1">
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageViewDetail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#ACBFBFBF"
+                android:scaleType="fitXY" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <!-- 1.5 -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.5"
+        android:orientation="horizontal"
+        android:weightSum="3">
+
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:weightSum="3">
+            android:layout_weight="2"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Titolo"
+                android:textColor="#000000"
+                android:textSize="22dp"
+                android:textStyle="normal" />
+
+            </ScrollView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:paddingTop="10dp"
+            android:paddingEnd="10dp">
+
+            <Button
+                android:id="@+id/buttonRateFilm"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:backgroundTint="@color/colorPrimary"
+                android:text="Valuta"
+                android:textSize="20dp" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <!-- 3.7 -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3.7"
+        android:padding="10dp"
+        android:orientation="vertical"
+        android:weightSum="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel dolor sit amet tortor congue egestas vitae eget elit. Integer imperdiet ante arcu, a accumsan purus laoreet accumsan. Praesent turpis tellus, ultricies nec gravida et, tristique vel ante. Nullam quis nulla dui. Vestibulum ac porttitor sapien, nec pellentesque elit. Praesent gravida vehicula ipsum, id efficitur turpis sagittis molestie. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis diam congue, auctor sapien consectetur, lobortis erat. Integer dolor odio, porttitor quis varius et, egestas eget massa. Suspendisse a nulla ultrices, facilisis lectus in, laoreet diam."
+                android:textSize="18dp" />
+
+            </ScrollView>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <!-- 0.7 -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.7"
+        android:orientation="horizontal"
+        android:weightSum="2">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1.2"
+            android:gravity="bottom"
+            android:paddingBottom="10dp">
 
             <TextView
                 android:id="@+id/rateNumber"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="   "
+                android:textAlignment="textEnd"
+                android:text="     "
                 android:textColor="#000000"
-                android:textSize="20dp"
-                android:layout_weight="2"/>
+                android:textSize="20dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.2"
+            android:gravity="bottom"
+            android:paddingBottom="10dp">
 
             <ImageView
                 android:id="@+id/star"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
+
         </LinearLayout>
 
     </LinearLayout>
