--- a/ProjectX/app/src/main/res/layout/activity_detail.xml
+++ b/ProjectX/app/src/main/res/layout/activity_detail.xml
@@ -5,11 +5,11 @@
     android:orientation="vertical"
     android:weightSum="9">
 
-    <!-- 3.1 -->
+    <!-- 3.3 -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3.1"
+        android:layout_weight="3.3"
         android:orientation="vertical"
         android:weightSum="1">
 
@@ -30,12 +30,13 @@
 
     </LinearLayout>
 
-    <!-- 1.5 -->
+    <!-- 1.3 -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.5"
+        android:layout_weight="1.3"
         android:orientation="horizontal"
+        android:gravity="center_vertical"
         android:weightSum="3">
 
         <LinearLayout
@@ -43,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:paddingStart="10dp">
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -66,8 +67,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="end"
-            android:paddingTop="10dp"
+            android:gravity="center_vertical"
             android:paddingEnd="10dp">
 
             <Button
