--- a/ProjectX/app/src/main/res/menu/toolbar_menu.xml
+++ b/ProjectX/app/src/main/res/menu/toolbar_menu.xml
@@ -5,7 +5,8 @@
     <item
         android:id="@+id/search_bar"
         android:title="Search"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/search"
         app:actionViewClass="android.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView"/>
+
 </menu>
