--- a/ProjectX/app/src/main/res/values/styles.xml
+++ b/ProjectX/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.ActionBar.TitleTextStyle" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
 </resources>
