--- a/ProjectX/app/src/main/res/menu/toolbar_menu.xml
+++ b/ProjectX/app/src/main/res/menu/toolbar_menu.xml
@@ -7,6 +7,6 @@
         android:title="Search"
         android:icon="@drawable/search"
         app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="ifRoom|collapseActionView"/>
+        app:showAsAction="ifRoom"/>
 
 </menu>
